fixtures/errors/eval_strict_source_var_leak.js
eval("\"use strict\"; var y = 10;");
console.log(y);
