fixtures/errors/eval_strict_source_var_leak.expected
exit_code: 1
--- stdout ---
--- stderr ---
Error: error: undeclared identifier `y`
 --> errors/eval_strict_source_var_leak.js:2:13
2 | console.log(y);
  |             ^

